# openlane_prototype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
cmake/: OpenLane.cmake  OpenLaneComponentBuilder.cmake
config/: algorithm_a.xml  algorithm_b.xml  algorithm_c.xml  component1.xml  component_a.xml  component_b.xml  valid.xml
include/openlane/: component.h  component_provider.h  error_code.h  module.h  module_xml_parser.h  openlane.h  visibility.h  xml_parser_interface.h
include/openlane/impl/: module_impl.h
sample/: CMakeLists.txt
sample/algorithm_a/: CMakeLists.txt  algo.cpp  algo.h  main.cpp  main.h
sample/algorithm_b/: CMakeLists.txt  algo.cpp  algo.h  main.c  main.cpp
sample/algorithm_c/: CMakeLists.txt  algo.c  algo.cpp  algo.h  main.cpp
sample/component1/: CMakeLists.txt  component.cpp  component.h  main.cpp
sample/example/: CMakeLists.txt  main.cpp
sample/include/algorithm/: algo.h  algo_c.h
sample/include/component1/: component.h
scripts/: component.ld  sample.sh  tests.sh
src/: CMakeLists.txt  component_provider.cpp  module.cpp  module_xml_parser.cpp  xml_parser.cpp
tests/: CMakeLists.txt  component_provider_test.cpp  module_test.cpp  module_xml_parser_test.cpp
